# quant_binance

./: .env.example  .gitignore  ARCHITECTURE.md  pyproject.toml  requirements.txt  session_summary_2026-04-14.md
notebooks/: build_dataset.ipynb
quant_binance.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: backfill.py  sample.py  stream.py
src/: config.py
src/features/: bsadf.py
src/ingestion/: historical.py  live.py
src/processing/: bars.py  threshold.py
src/storage/: db.py  schema.sql
tests/: test_bars.py  test_threshold.py
