[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "quant_binance"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary",
    "requests",
    "websocket-client",
    "python-dotenv",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
